Added update candidate profile