@@ -115,7 +115,10 @@
 							<version>1.18.30</version> <!-- Or latest stable version -->
 						</path>
 					</annotationProcessorPaths>
-				</configuration>
+                    <source>21</source>
+                    <target>21</target>
+                    <compilerArgs>--enable-preview</compilerArgs>
+                </configuration>
 			</plugin>
 			<plugin>
 				<groupId>org.asciidoctor</groupId>
